style(Verification Component): Modified the view of the inputs

--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -206,13 +206,13 @@
           </tr>
         </tbody>
       </table>
-      <button class="btn btn-group btn-primary btn-form theme-color">
+      <button class="center btn btn-group btn-primary btn-form theme-color">
         Complete
       </button>
-      <button class="btn btn-group btn-primary btn-form theme-color">
+      <button class="center btn btn-group btn-primary btn-form theme-color">
         Incomplete
       </button>
-      <button class="btn btn-group btn-primary btn-form theme-color">
+      <button class="center btn btn-group btn-primary btn-form theme-color">
         Run Validation
       </button>
     </form>
