--- a/src/app/pages/assessment/components/assessment/assessment.component.html
+++ b/src/app/pages/assessment/components/assessment/assessment.component.html
@@ -3,12 +3,8 @@
     <h4>{{ formTitle | titlecase }}</h4>
   </div>
   <div class="filter row">
-    <ngx-dhis2-selection-filters
-      (filterUpdate)="onFilterUpdateAction($event)"
-      [dataSelections]="dataSelections"
-      [selectionFilterConfig]="selectionFilterConfig"
-      (update)="onFilterUpdateAction($event)"
-    >
+    <ngx-dhis2-selection-filters (filterUpdate)="onFilterUpdateAction($event)" [dataSelections]="dataSelections"
+      [selectionFilterConfig]="selectionFilterConfig" (update)="onFilterUpdateAction($event)">
     </ngx-dhis2-selection-filters>
   </div>
   <div *ngIf="showForm">
@@ -35,59 +31,35 @@
                 </tr>
               </thead>
               <tbody>
-                <tr
-                  *ngFor="
+                <tr *ngFor="
                     let indicator of assessmentIndicators$ | async;
                     let sno = index
-                  "
-                >
+                  ">
                   <th scope="row" class="sno">{{ sno + 1 }}</th>
                   <td class="indicator">{{ indicator.indicator }}</td>
                   <td>
-                    <input
-                      class="form-control"
-                      value="{{ indicator.possibleMaxValue }}"
-                      disabled
-                    />
+                    {{ indicator.possibleMaxValue }}
                   </td>
                   <td>
-                    <input
-                      class="form-control input-group-sm"
-                      type="number"
-                      (blur)="
+                    <input class="form-control input-group-sm" type="number" (blur)="
                         onInputBlur(sno, indicator.dataElement);
                         onInputChange(sno)
-                      "
-                      (keyup)="onInputChange(sno)"
-                      [(ngModel)]="obtainedValue[sno]"
-                      [ngModelOptions]="{ standalone: true }"
-                      max="{{ indicator.possibleMaxValue }}"
-                    />
+                      " (keyup)="onInputChange(sno)" [(ngModel)]="obtainedValue[sno]"
+                      [ngModelOptions]="{ standalone: true }" max="{{ indicator.possibleMaxValue }}" />
                     <mat-form-field class="mat-form-field">
                       <mat-label>Selection Application</mat-label>
                       <mat-select>
-                        <mat-option
-                          [value]="1"
-                          (click)="onOptionSelect(sno, 1)"
-                        >
+                        <mat-option [value]="1" (click)="onOptionSelect(sno, 1)">
                           Applicable
                         </mat-option>
-                        <mat-option
-                          [value]="2"
-                          (click)="onOptionSelect(sno, 0)"
-                        >
+                        <mat-option [value]="2" (click)="onOptionSelect(sno, 0)">
                           Not Applicable
                         </mat-option>
                       </mat-select>
                     </mat-form-field>
                   </td>
                   <td>
-                    <input
-                      class="form-control input-group-sm"
-                      disabled
-                      [(ngModel)]="percentage[sno]"
-                      [ngModelOptions]="{ standalone: true }"
-                    />
+                    {{ percentage[sno] }}
                   </td>
                   <td>
                     <input class="observation form-control input-group-sm" />
@@ -102,10 +74,7 @@
                 </tr>
               </tbody>
             </table>
-            <button
-              class="btn btn-group btn-primary theme-color my-2 my-sm-0"
-              type="submit"
-            >
+            <button class="btn btn-group btn-primary theme-color my-2 my-sm-0" type="submit">
               Complete
             </button>
             <button class="btn btn-group btn-primary theme-color">
