--- a/src/app/pages/configuration/components/assessment-config/assessment/assessment.component.html
+++ b/src/app/pages/configuration/components/assessment-config/assessment/assessment.component.html
@@ -10,18 +10,7 @@
         formControlName="indicator"
         class="form-control"
         placeholder="{{ indicator }}"
-      >
-    </div>
-    <div class="form-group">
-      <label>Data Element</label>
-      <select class="custom-select" formControlName="dataElement">
-        <option>[Select Data Element]</option>
-        <option
-          *ngFor="let option of dataElements$ | async; let i = index"
-          value="{{ option.id }}"
-          >{{ option.name }}</option
-        >
-      </select>
+      />
     </div>
     <div class="form-group">
       <label>Possible Maximum Value</label>
@@ -44,7 +33,11 @@
         </a>
       </div>
       <div class="form-group form-check col col-2">
-        <button type="submit" class="btn btn-primary">
+        <button
+          type="submit"
+          class="btn btn-primary"
+          [disabled]="assessmentForm.invalid"
+        >
           Save
         </button>
       </div>
