--- a/src/app/pages/configuration/components/assessment-config/edit-assessment/edit-assessment.component.html
+++ b/src/app/pages/configuration/components/assessment-config/edit-assessment/edit-assessment.component.html
@@ -8,16 +8,6 @@
       <input type="text" formControlName="indicator" class="form-control" />
     </div>
     <div class="form-group">
-      <label>Data Element</label>
-      <select class="custom-select" formControlName="dataElement">
-        <option
-          *ngFor="let option of dataElements$ | async; let i = index"
-          value="{{ option.id }}"
-          >{{ option.name }}</option
-        >
-      </select>
-    </div>
-    <div class="form-group">
       <label>Possible Maximum Value</label>
       <input
         type="number"
@@ -32,7 +22,11 @@
         </button>
       </div>
       <div class="form-group form-check col col-2">
-        <button type="submit" class="btn btn-primary">
+        <button
+          type="submit"
+          class="btn btn-primary"
+          [disabled]="assessmentForm.invalid"
+        >
           Save
         </button>
       </div>
